[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sre-incident-agent"
version = "0.1.0"
description = "OpenEnv benchmark environment for SRE incident triage"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gymnasium>=0.29.1",
    "pydantic>=2.7.0",
    "openai>=1.40.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:main"

[tool.setuptools.packages.find]
where = ["."]
